--- a/tl1/MainPage.xaml
+++ b/tl1/MainPage.xaml
@@ -1,36 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    <ContentPage
+    x:Class="TraficLight.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="tl1.MainPage">
-
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
+    xmlns:m="clr-namespace:TraficLight.Models"
+    xmlns:vm="clr-namespace:TraficLight.ViewModels"
+    x:DataType="vm:MainPageVM">
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,*" RowSpacing="5">
+        <Frame>
+            <BoxView BackgroundColor="{Binding RedColor}" />
+        </Frame>
+        <Frame Grid.Row="1">
+            <BoxView BackgroundColor="{Binding YellowColor}" />
+        </Frame>
+        <Frame Grid.Row="2">
+            <BoxView BackgroundColor="{Binding GreenColor}" />
+        </Frame>
+        <Button
+            Grid.Row="3"
+            Command="{Binding ChangeLightCommand}"
+            Text="{x:Static m:Strings.ChangeLightText}" />
+        <Button
+            Grid.Row="4"
+            Command="{Binding SwitchAutoChangeCommand}"
+            Text="{Binding SwitchChangeLightText}" />
             <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+            Grid.Row="5"
+            HorizontalOptions="Center"
+            Source="{Binding LightImage}"
+            VerticalOptions="Center" />
+    </Grid>
 </ContentPage>
